fixed overflow issues on the about me page for smaller screens

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ h1 {
   font-family: 'Roboto Condensed', sans-serif;
   background-color: white;
   position: absolute;
-  top: 30px;
+  top: -240px;
   left: 0px;
   font-size: 105px;
   text-align: center;
@@ -110,8 +110,8 @@ h1 {
   display: none;
   position: absolute;
   width: 42%;
-  margin: 11% 29% 0px;
-  height: 57%;
+  margin: 4% 29% 0px;
+  height: 65%;
   overflow: scroll;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
@@ -256,7 +256,7 @@ display: inline-block;
 
 #contact-container{
   width: 80%;
-  margin: auto 10%;
+  margin: 10% 10%;
 }
 
 
@@ -639,6 +639,9 @@ display: inline-block;
     #project-description p {
       font-size: 13px;
     }
+    #about-container {
+      margin: 200px auto 0px;
+    }
     #about-container p {
       font-size: 13px;
     }
@@ -664,5 +667,24 @@ display: inline-block;
     #project-description {
       height: 96%;
     }
+
+    #info-button-container{
+      bottom: 160px;
+    }
+
+    #skills-container{
+      margin: 5% 25%;
+    }
+
+    #resume-container{
+      width: 36%;
+      margin: 4% 32% 0px;
+    }
+
+    #contact-container{
+      margin: 4% 10%;
+    }
+
+
  }   
 
